# embedding-server

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
embedding_server/: __main__.py  server.py
systemd/: embedding-server.service
tests/: openai.py  sink.py  test.py  test_compat.py
