[tool.poetry]
name = "embedding-server"
version = "0.1.0"
description = ""
authors = ["ss <santosh@sahoo.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sentence-transformers = "^2.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "server:main"