[tool.poetry]
name = "embedding-server"
version = "0.2.0"
description = ""
authors = ["ToshSan <santosh@sahoo.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sentence-transformers = "^2.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
faiss-cpu = "^1.7.4"
openai = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "embedding_server.server:main"
